Fix text alignment on mobile

--- a/sass/components/_stats-pr-card.scss
+++ b/sass/components/_stats-pr-card.scss
@@ -80,8 +80,8 @@
 
     &__content {
         margin-bottom: 3rem;
-        padding-right: 2.5rem;
-        padding-left: 2.5rem;
+        padding-right: 1rem;
+        padding-left: 1rem;
         font-size: v.$font-size;
         color: v.$slightly-transparent-white-75;
         line-height: 1.8;
